Fri Nov 22 15:50:42 1996  unknown  <bjaspan@mit.edu>

	* clnt_generic.c, clnt_simple.c, getrpcport.c: use sizeof instead
 	of h_length to determine number of bytes of addr to copy from DNS
 	response [krb5-misc/211]

Fri Nov 22 11:49:43 1996  Sam Hartman  <hartmans@mit.edu>

	* types.hin: Include stdlib.h if found at config time [203]

	* configure.in: Substitute STDLIB_INCLUDE into types.h. [203]

Tue Nov 12 16:27:27 1996  Barry Jaspan  <bjaspan@mit.edu>

	* auth_gssapi.c (auth_gssapi_create): handle channel bindings
 	failure so UDP connections can work [krb5-libs/180]

Tue Nov  5 18:43:46 1996  Tom Yu  <tlyu@mit.edu>

	* configure.in: Revert removal of CopySrcHeader, etc., for now.

	* Makefile.in (OBJS): Remove dependency of $(OBJS) on shared, also
	remove dependency of $(HDRS) on $(HDRDIR).  Both of these to avoid
	unecessary copying.

Wed Oct 30 13:18:34 1996  Barry Jaspan  <bjaspan@mit.edu>

	* xdr_stdio.c: Remove the #ifndef mc68000 cruft.  I'm not sure
 	what it was supposed to accomplish, but in both places it appeared
 	it was unquestionably wrong.  I suspect that the ifdef was put in
 	originally to optimize byte-alignment code that wasn't necessary
 	on the 68000.  Who knows?  Someone will complain if this isn't
 	right. [krb5-libs/47]
  
Tue Oct 29 13:03:50 1996  Barry Jaspan  <bjaspan@mit.edu>

	* auth_gssapi.c (auth_gssapi_create): #ifdef GSSAPI_KRB5, a null
 	mech_type implies gss_mech_krb5, so include that in the version 3
 	fallback test.  This change, along with the other changes for rpc
 	version 4, complete the fix for [krb5-libs/106].

Wed Oct 23 00:08:27 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* pmap_rmt.c:
	* clnt_udp.c: Change #ifdef sparc to #ifdef sun for more portability.
		[fixes PR#123]

Mon Oct 21 21:22:42 1996  Tom Yu  <tlyu@mit.edu>

	* Makefile.in, configure.in: Fixes to work with new directory
 	recursion method.

Wed Oct 16 16:12:07 1996  Barry Jaspan  <bjaspan@mit.edu>
